updated style.css file

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*!
 Theme Name: ekwa
-Theme URI: http://underscores.me/
+Theme URI: https://github.com/agskanchana/ekwa
 Author: ekwa marketing
 Author URI: http://www.ekwa.com
 Description: Description
-Version: 1.0.0
+Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: ekwa
